--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/core": "^14.0.0-next.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^14.0.0-next.0",
-    "@angular/material": "~14.2.0",
+    "@angular/material": "^14.2.0",
     "@angular/platform-browser": "^14.0.0-next.0",
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
